--- a/src/components/Mechanics/Mechanics.css
+++ b/src/components/Mechanics/Mechanics.css
@@ -22,6 +22,9 @@
     font-size: 32px;
     line-height: 37px;
     color: #000000;
+    text-decoration: underline;
+    text-underline-offset: 3px;
+    text-decoration-color: white;
 
 }
 .game-content p {
@@ -62,6 +65,9 @@
     line-height: 37px;
     color: #000000;
     margin: 3px 0px;
+    text-decoration: underline;
+    text-underline-offset: 3px;
+    text-decoration-color: white;
 }
 
 .token-content p {
